objects/SFBD__DunningActivity__c.object
<CustomObject>
    <description>Dunning Activities are templates for tasks that will be created on a Collections Plan from a Dunning Method.</description>
    <fields>
        <fullName>SFBD__ActivityDetails__c</fullName>
        <description>Description of this Activity. Maps to the Task Comments field when Collections Plans are generated from the related Dunning Method.</description>
        <inlineHelpText>Description of this Activity. Maps to the Task Comments field when Collections Plans are generated from the related Dunning Method.</inlineHelpText>
        <label>Activity Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFBD__ActivitySubject__c</fullName>
        <description>Subject of this Activity. Maps to the Task Subject field when Collections Plans are created from the related Dunning Method.</description>
        <inlineHelpText>Subject of this Activity. Maps to the Task Subject field when Collections Plans are created from the related Dunning Method.</inlineHelpText>
        <label>Activity Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Send Letter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFBD__DunningMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Dunning Method associated with this Dunning Activity</description>
        <inlineHelpText>Dunning Method for this Dunning Activity</inlineHelpText>
        <label>Dunning Method</label>
        <referenceTo>SFBD__DunningMethod__c</referenceTo>
        <relationshipLabel>Dunning Activities</relationshipLabel>
        <relationshipName>Dunning_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__OffsetDays__c</fullName>
        <description>Number of days to offset a task from a Collections Plan start date.</description>
        <inlineHelpText>Number of days to offset a task from a Collections Plan start date.</inlineHelpText>
        <label>Offset Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dunning Activity</label>
    <listViews>
        <fullName>SFBD__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dunning Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dunning Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>